--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Jack Kim Portfolio</title>
+		<title>Jack S. Kim Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Seong Kim portfolio website" />
+		<meta name="description" content="Jack Kim portfolio website" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
     <script defer src="https://kit.fontawesome.com/7f2b3715a0.js" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Jack Kim</h1>
+							<h1>Jack S. Kim</h1>
 							<p>Full Stack Developer. WEBPT7 Cohort at Lambda
-              School.<a href="https://twitter.com/seong_ck"> @seong_ck</a></p>
+              School.<a href="https://twitter.com/jackskim_"> @jackskim_</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -88,7 +88,15 @@
                <div class="skill">
                   <i class="fab fa-git-alt fa-2x"></i>
                   <span class="skill-desc">Git</span>
-                </div>
+               </div>
+               <div class="skill">
+                  <i class="fab fa-node-js fa-2x"></i>
+                  <span class="skill-desc">Node.js</span>
+               </div>
+               <div class="skill">
+                  <i class="fas fa-database fa-2x"></i>
+                  <span class="skill-desc">SQL</span>
+               </div>
 
               </div>
 						</div>
@@ -101,8 +109,40 @@
 						</header>
 						<div class="content">
               <p>Projects I've worked on
-              demonstrating <strong>React</strong>, <strong>Redux</strong>, and
-              <strong>JavaScript</strong> skills.
+                demonstrating <strong>JavaScript</strong>, <strong>React</strong>, <strong>Redux</strong>, and
+              <strong>Node.js</strong> skills.
+
+  					  <!-- Section -->
+								<section>
+									<header>
+										<h3>Essentialism (Backend)</h3>
+										<p>An app that allows users to regain control over their
+                      choices about where to direct their time and energy -
+                      based on their core values.  As the Backend Developer, I developed
+                      an API following the REST architectural pattern, ensured
+                      data integrity and consistency, added authorization and
+                      authentication, and wrote automated tests.  Tech Stack:
+                      Node.js, Express, Knex.js,
+                      bcryptjs, JSON web tokens, and PostgreSQL.
+                    </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://github.com/Essentialism-1-bw/Back-end" class="landscape"><img
+                        src="images/essentialism/essentialism_1.png" alt="Screenshot
+                        of essentialism app code" /></a>
+											<a
+                      href="https://github.com/Essentialism-1-bw/Back-end"><img
+                      src="images/essentialism/essentialism2.png" alt="Screenshot
+                        of essentialism app test" /></a>
+											<a
+                      href="https://github.com/Essentialism-1-bw/Back-end"><img
+                      src="images/essentialism/essentialism_3.png" alt="Screenshot
+                        of essentialism app test" /></a>
+										</div>
+									</div>
+								</section>
+
 
   					  <!-- Section -->
 								<section>
@@ -145,45 +185,21 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://react-redux-app-git-unnest.seongk.now.sh/" class="landscape"><img
+											<a href="https://react-redux-app-d8txwcl9a.now.sh/" class="landscape"><img
                         src="images/github_jobs/desktop.png" alt="Screenshot
                         of Github Jobs app" /></a>
 											<a
-                      href="https://react-redux-app-git-unnest.seongk.now.sh/"><img
+                      href="https://react-redux-app-d8txwcl9a.now.sh/"><img
                       src="images/github_jobs/mobile.png" alt="Screenshot
                         of Github Jobs app" /></a>
 											<a
-                      href="https://github.com/seongck/React-Redux-App/tree/unnest"><img
+                      href="https://github.com/jackskim/React-Redux-App/tree/unnest"><img
                       src="images/github_jobs/code.png" alt="Screenshot
                         of Github Jobs app" /></a>
 										</div>
 									</div>
 								</section>
 
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Budget Board</h3>
-										<p>A budget/finance app where you can add income & expense
-                    categories with individual items and see them rendered on a
-                    graph. Leverages Chrome Storage Sync so that you can pull up
-                    your budget by signing into Google Chrome from any device that supports extensions. Currently has 1200+ users. </p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="https://github.com/seongck/geckos-08" class="landscape"><img
-                        src="images/budgetboard/main.png" alt="Photo of Budget
-                             Board App" /></a>
-											<a href="https://github.com/seongck/geckos-08"><img
-                        src="images/budgetboard/delete.png" alt="Photo of Budget
-                             Board App" /></a>
-											<a href="https://github.com/seongck/geckos-08"><img
-                        src="images/budgetboard/category.png" alt="Photo of Budget
-                             Board App" /></a>
-										</div>
-									</div>
-								</section>
 
   					  <!-- Section -->
 								<section>
@@ -196,15 +212,15 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/bw-macro-calculator/bw-macro-calculator" class="landscape"><img
+											<a href="https://github.com/jackskim/bw-macro-calculator" class="landscape"><img
                         src="images/macro_calc/macro_calc_desktop.png" alt="Photo of Macro
                         Calculator desktop view website" /></a>
 											<a
-                        href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
+                        href="https://github.com/jackskim/bw-macro-calculator"><img
                         src="images/macro_calc/macro_calc_tablet.png" alt="Photo of Macro
                         Calculator tablet view website" /></a>
 											<a
-                        href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
+                        href="https://github.com/jackskim/bw-macro-calculator"><img
                         src="images/macro_calc/macro_calc_mobile.png" alt="Photo of Macro
                         Calculator mobile view website" /></a>
 										</div>
@@ -526,11 +542,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">seongk@pm.me</a>
+                  <a href="mailto:jackskim29@gmail.com">jackskim29@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">Send me an email or message</a>
+									<p>Send me an email or message</p>
 								</li>
 								<li>
 									<h3>Address</h3>
@@ -539,9 +555,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="https://www.twitter.com/seong_ck" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.linkedin.com/in/seongck/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://github.com/seongck" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.twitter.com/jackskim_" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.linkedin.com/in/jackskim/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/jackskim" class="icon fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
 							</ul>
@@ -549,7 +565,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Seong Kim. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Jack Kim. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
