Update projects section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <header>
           <h1>Jack S. Kim</h1>
           <p>
-            Full Stack Developer. WEBPT7 Cohort at Lambda School.<a
+            Full Stack Developer
+            <br>
+            JavaScript | React | Node
+            <br>
+            <a
               href="https://twitter.com/jackskim_"
             >
               @jackskim_</a
@@ -145,9 +149,16 @@
                 two months. 
                 <br>
                 <br>
-                Web Developer responsibilities included: building the Front End to match design files provided by our UX members, utilizing data endpoints provided by our DS members, building the Backend to ensure data integrity and consistency, and ensuring our codebase has over 50% test coverage
-                <br>
-                <br>
+                <h5>Contributions:</h5>
+                <ul style="text-align: left">
+                  <li>Building React components to match design files provided by
+                    our UX members</li>
+                  <li>Utilizing data endpoints provided by our DS members</li> 
+                  <li>Building Backend models and routers to ensure data integrity and
+                    consistency</li>
+                  <li>Writing unit tests to ensure our codebase has over 50%
+                    test coverage</li>
+                </ul>
                 <strong>Tech Stack</strong>: React, Material-UI, Passport.js, Node.js, Express, PostgreSQL, Jest
               </p>
             </header>
@@ -189,12 +200,16 @@
                 core values.
                 <br>
                 <br>
-                As the Backend Developer, I developed an API
-                following the REST architectural pattern, ensured data integrity
-                and consistency, added authorization and authentication, and
-                wrote automated tests.
-                <br>
-                <br>
+                <h5>Contributions:</h5>
+                <ul style="text-align: left">
+                  <li>Developed an API following the REST architectural
+                    pattern</li>
+                  <li>Ensured data integrity
+                    and consistency by following best practices for data
+                    normalization </li>
+                  <li>Utilized JSON Web tokens and bcrypt for authorization and authentication</li>
+                  <li>Wrote automated tests with Jest</li>
+                </ul>
                 <strong>Tech Stack</strong>: Node.js, Express, Knex.js,
                 bcryptjs, JSON web tokens, and PostgreSQL.
               </p>
@@ -237,7 +252,7 @@
                 CRA boilerplate and Semantic-UI components.
                 <br>
                 <br>
-                <strong>Tech Stack:</strong>React, React Router, axios, yup and 
+                <strong>Tech Stack:</strong> React, React Router, axios, yup and 
                 JSON web tokens.
               </p>
             </header>
