Update About Me and Projects sections

--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>
-            Full Stack Developer devoted to building fast, reliable and engaging
-            software products. I'm excited to bring my technical and
-            collaborative skills to an agile, strategic team.
-          </p>
+          <p>Hi, I’m Jack. I’m a full stack developer who’s been coding for 3+ years. My specialties include JavaScript, React, Node and Express.
+
+With a background in marketing and logistics, I’ve developed strong creative problem-solving, organizational and collaborative skills. I’m interested in combining those skills with web technologies to help build engaging and cutting-edge projects.</p>
           <span class="image main"
             ><img src="images/macbook.jpg" alt="macbook photo"
           /></span>
@@ -119,6 +117,11 @@
               <i class="fas fa-database fa-2x"></i>
               <span class="skill-desc">SQL</span>
             </div>
+            <div class="skill">
+              <i class="fab fa-python fa-2x"></i>
+              <span class="skill-desc">Python</span>
+            </div>
+
           </div>
         </div>
       </section>
@@ -130,13 +133,113 @@
         </header>
         <div class="content">
           <p>
-            Projects I've worked on demonstrating <strong>JavaScript</strong>,
-            <strong>React</strong>, <strong>Node.js</strong>, and
-            <strong>PostgreSQL</strong> competence.
-
+            Projects I've worked on using,
+            <strong>React</strong>, <strong>Redux</strong>, <strong>Node.js</strong>, and
+            <strong>PostgreSQL</strong>
           </p>
 
          <!-- Section -->
+          <section>
+            <header>
+              <h3>SoMe (Social Media Strategy)</h3>
+              <p>SoMe makes it easy to streamline and optimize your social media presence in one convenient place and provides machine learning driven insights into your followers engagement habits 
+                <br>
+                <br>
+                Designed and developed by a cross-functional remote team of 3
+                Data Scientists and 4 Web Developers over
+                two months. 
+                <br>
+                <br>
+                <h5>Contributions:</h5>
+                <ul style="text-align: left">
+                  <li>Led a team of 3 data scientists and 4 web developers through full product development lifecycle over 8-week project unit, including product releases, debugging, code reviews, and stakeholder management</li>
+                  <li>Helped refactor the initial codebase for improved
+                    efficiency, readability and scalability</li>
+                  <li>Assisted Web team members with implementing OAuth 2.0 and Okta
+                    authentication flow</li> 
+                  <li>Wrote unit tests to ensure our codebase has over 50%
+                    test coverage</li>
+                </ul>
+                <strong>Tech Stack</strong>: React, Redux, Material-UI, Okta, Node.js, Express, PostgreSQL, Jest
+              </p>
+            </header>
+            <div class="content">
+              <div class="gallery">
+                <a
+                  href="https://www.so-me.net"
+                  class="landscape"
+                  ><img
+                    src="images/some/some_landing.png"
+                    alt="Screenshot
+                        of SoMe landing page"
+                    style="object-fit: cover"
+                /></a>
+                <a href="https://github.com/some-labs-24/front-end"
+                  ><img
+                    src="images/some/some_kanban.png"
+                    alt="Screenshot
+                        of SoMe kanban board"
+                /></a>
+                <a
+                  href="https://github.com/some-labs-24/front-end"
+                  ><img
+                    src="images/some/some_analytics.png"
+                    alt="Screenshot
+                        of SoMe analytics page"
+                /></a>
+              </div>
+            </div>
+          </section>
+
+          <!-- Section -->
+          <section>
+            <header>
+              <h3>Game of Life</h3>
+              <p>The Game of Life is a very famous celluar automaton devised by the British mathematician John Horton Conway in 1970. It is a zero-player game, meaning that its progression is determined by its initial state and requires no further input. You interact with this game by creating an initial configuration of cells and observing how it evolves.    
+                <br>
+                <br>
+                <h5>Contributions:</h5>
+                <ul style="text-align: left">
+                  <li>Wrote an algorithm that examines the state of each cell's
+                  neighbors and applies the Rules to update the cell's state</li>
+                  <li>Created three sample cell configurations that users can
+                    load and run</li> 
+                  <li>Added an option that create a random cell configurations</li>
+                  <li>Added a feature that allows users to specificy the speed
+                    of the simulation</li>
+                </ul>
+                <strong>Tech Stack</strong>: React, React Context
+              </p>
+            </header>
+            <div class="content">
+              <div class="gallery">
+                <a
+                  href="https://gameoflife-jsk.netlify.app/"
+                  class="landscape"
+                  ><img
+                    src="images/gameoflife/about.png"
+                    alt="Screenshot
+                        of Game of Life About section"
+                    style="object-fit: cover"
+                /></a>
+                <a href="https://github.com/jackskim/game-of-life"
+                  ><img
+                    src="images/gameoflife/glider.png"
+                    alt="Screenshot
+                        of Game of Life glider preset"
+                /></a>
+                <a
+                  href="https://github.com/jackskim/game-of-life"
+                  ><img
+                    src="images/gameoflife/random.png"
+                    alt="Screenshot
+                        of Game of Life random preset"
+                /></a>
+              </div>
+            </div>
+          </section>
+
+          <!-- Section -->
           <section>
             <header>
               <h3>Findur City</h3>
@@ -185,98 +288,6 @@
                     src="images/findurcity/search.png"
                     alt="Screenshot
                         of Findur City search bar"
-                /></a>
-              </div>
-            </div>
-          </section>
-
-
-          <section>
-            <header>
-              <h3>Essentialism (Backend)</h3>
-              <p>
-                An app that allows users to regain control over their choices
-                about where to direct their time and energy - based on their
-                core values.
-                <br>
-                <br>
-                <h5>Contributions:</h5>
-                <ul style="text-align: left">
-                  <li>Developed an API following the REST architectural
-                    pattern</li>
-                  <li>Ensured data integrity
-                    and consistency by following best practices for data
-                    normalization </li>
-                  <li>Utilized JSON Web tokens and bcrypt for authorization and authentication</li>
-                  <li>Wrote automated tests with Jest</li>
-                </ul>
-                <strong>Tech Stack</strong>: Node.js, Express, Knex.js,
-                bcryptjs, JSON web tokens, and PostgreSQL.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a
-                  href="https://github.com/Essentialism-1-bw/Back-end"
-                  class="landscape"
-                  ><img
-                    src="images/essentialism/essentialism_1.png"
-                    alt="Screenshot
-                        of essentialism app code"
-                /></a>
-                <a href="https://github.com/Essentialism-1-bw/Back-end"
-                  ><img
-                    src="images/essentialism/essentialism2.png"
-                    alt="Screenshot
-                        of essentialism app test"
-                /></a>
-                <a href="https://github.com/Essentialism-1-bw/Back-end"
-                  ><img
-                    src="images/essentialism/essentialism_3.png"
-                    alt="Screenshot
-                        of essentialism app test"
-                /></a>
-              </div>
-            </div>
-          </section>
-
-          <!-- Section -->
-          <section>
-            <header>
-              <h3>TSTUFF</h3>
-              <p>
-                An app for tech enthusiasts to rent or rent out tech equipment.
-                <br>
-                <br>
-                My partner Julian and I built the app in two weeks starting with
-                CRA boilerplate and Semantic-UI components.
-                <br>
-                <br>
-                <strong>Tech Stack:</strong> React, React Router, axios, yup and 
-                JSON web tokens.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a
-                  href="https://github.com/bw-use-my-tech-stuff/Front-End"
-                  class="landscape"
-                  ><img
-                    src="images/tstuff/home.png"
-                    alt="Screenshot
-                        of TSTUFF app"
-                /></a>
-                <a href="https://github.com/bw-use-my-tech-stuff/Front-End"
-                  ><img
-                    src="images/tstuff/dashboard.png"
-                    alt="Screenshot
-                        of TSTUFF app"
-                /></a>
-                <a href="https://github.com/bw-use-my-tech-stuff/Front-End"
-                  ><img
-                    src="images/tstuff/listitem.png"
-                    alt="Screenshot
-                        of TSTUFF app"
                 /></a>
               </div>
             </div>
