Update link URLs and remove macbook photo

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             JavaScript | React | Node
             <br>
             <a
-              href="https://twitter.com/jackskim_"
+              href="https://twitter.com/jskway"
             >
-              @jackskim_</a
+              @jskway</a
             >
           </p>
           <ul class="actions">
@@ -63,9 +63,6 @@
           <p>Hi, I’m Jack. I’m a full stack developer who’s been coding for 3+ years. My specialties include JavaScript, React, Node and Express.
 
 With a background in marketing and logistics, I’ve developed strong creative problem-solving, organizational and collaborative skills. I’m interested in combining those skills with web technologies to help build engaging and cutting-edge projects.</p>
-          <span class="image main"
-            ><img src="images/macbook.jpg" alt="macbook photo"
-          /></span>
         </div>
       </section>
 
@@ -222,14 +219,14 @@ With a background in marketing and logistics, I’ve developed strong creative p
                         of Game of Life About section"
                     style="object-fit: cover"
                 /></a>
-                <a href="https://github.com/jackskim/game-of-life"
+                <a href="https://github.com/jskway/game-of-life"
                   ><img
                     src="images/gameoflife/glider.png"
                     alt="Screenshot
                         of Game of Life glider preset"
                 /></a>
                 <a
-                  href="https://github.com/jackskim/game-of-life"
+                  href="https://github.com/jskway/game-of-life"
                   ><img
                     src="images/gameoflife/random.png"
                     alt="Screenshot
@@ -642,7 +639,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
               <ul class="icons">
                 <li>
                   <a
-                    href="https://www.twitter.com/jackskim_"
+                    href="https://www.twitter.com/jskway"
                     class="icon fa-twitter"
                     ><span class="label">Twitter</span></a
                   >
@@ -655,7 +652,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
                   >
                 </li>
                 <li>
-                  <a href="https://github.com/jackskim" class="icon fa-github"
+                  <a href="https://github.com/jskway" class="icon fa-github"
                     ><span class="label">GitHub</span></a
                   >
                 </li>
