--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>Hi, I’m Jack. I’m a full stack developer who’s been coding for 3+ years. My specialties include JavaScript, React, Node and Express.
+          <p>Hi, I’m Jack. I’m a full stack developer who’s been coding for 3+
+            years. My specialties include JavaScript, React, Node and Unit
+            Testing.
 
 With a background in marketing and logistics, I’ve developed strong creative problem-solving, organizational and collaborative skills. I’m interested in combining those skills with web technologies to help build engaging and cutting-edge projects.</p>
         </div>
@@ -72,16 +74,7 @@ With a background in marketing and logistics, I’ve developed strong creative p
           <h2>Skills / Technologies</h2>
         </header>
         <div class="content">
-          <!--
-							<ul class="feature-icons">
-                <li class="fab fa-react">React</li>
-                <li class="icon fa-code">JavaScript</li>
-								<li class="icon fa-html5">HTML5</li>
-								<li class="icon fa-css3">CSS3</li>
-								<li class="icon fa-git">Git</li>
-							</ul>
-              -->
-          <div class="skills">
+           <div class="skills">
             <div class="skill">
               <i class="fab fa-react fa-2x"></i>
               <span class="skill-desc">React</span>
@@ -149,13 +142,16 @@ With a background in marketing and logistics, I’ve developed strong creative p
                 <br>
                 <h5>Contributions:</h5>
                 <ul style="text-align: left">
-                  <li>Led a team of 3 data scientists and 4 web developers through full product development lifecycle over 8-week project unit, including product releases, debugging, code reviews, and stakeholder management</li>
+                  <li>Led a team of 3 data scientists and 4 web developers
+                    through full product development lifecycle over 8-week
+                    project unit, including product releases, debugging, code
+                  reviews, and stakeholder meetings</li>
                   <li>Helped refactor the initial codebase for improved
                     efficiency, readability and scalability</li>
                   <li>Assisted Web team members with implementing OAuth 2.0 and Okta
                     authentication flow</li> 
-                  <li>Wrote unit tests to ensure our codebase has over 50%
-                    test coverage</li>
+                  <li>Wrote unit tests to contribute to >50% test coverage
+                    across our whole codebase</li>
                 </ul>
                 <strong>Tech Stack</strong>: React, Redux, Material-UI, Okta, Node.js, Express, PostgreSQL, Jest
               </p>
@@ -259,7 +255,8 @@ With a background in marketing and logistics, I’ve developed strong creative p
                   <li>Writing unit tests to ensure our codebase has over 50%
                     test coverage</li>
                 </ul>
-                <strong>Tech Stack</strong>: React, Material-UI, Passport.js, Node.js, Express, PostgreSQL, Jest
+                <strong>Tech Stack</strong>: React, Material-UI, bcrypt.js,
+                JWTs, Node.js, Express, PostgreSQL, Jest
               </p>
             </header>
             <div class="content">
