Update GameofLife screenshots and favicons

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
 -->
 <html>
   <head>
-    <title>Jack S. Kim Portfolio</title>
+    <title>Jack Kim Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="description" content="Jack Kim portfolio website" />
+    <meta name="description" content="Jack Kim's Portfolio" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#40e0d0">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
     <script
       defer
       src="https://kit.fontawesome.com/7f2b3715a0.js"
@@ -27,7 +34,7 @@
       <!-- Intro -->
       <section class="intro">
         <header>
-          <h1>Jack S. Kim</h1>
+          <h1>Jack Kim</h1>
           <p>
             Full Stack Developer
             <br>
@@ -217,9 +224,9 @@ With a background in marketing and logistics, I’ve developed strong creative p
                 /></a>
                 <a href="https://github.com/jskway/game-of-life"
                   ><img
-                    src="images/gameoflife/glider.png"
+                    src="images/gameoflife/exploder.png"
                     alt="Screenshot
-                        of Game of Life glider preset"
+                        of Game of Life exploder preset"
                 /></a>
                 <a
                   href="https://github.com/jskway/game-of-life"
