--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ With a background in marketing and logistics, I’ve developed strong creative p
                   neighbors and applies the Rules to update the cell's state</li>
                   <li>Created three sample cell configurations that users can
                     load and run</li> 
-                  <li>Added an option that create a random cell configurations</li>
-                  <li>Added a feature that allows users to specificy the speed
+                  <li>Added an option that creates random cell configurations</li>
+                  <li>Added a feature that allows users to specify the speed
                     of the simulation</li>
                 </ul>
                 <strong>Tech Stack</strong>: React, React Context
