--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <header>
           <h1>Jack Kim</h1>
           <p>
-            Full Stack Developer
+            Software Engineer
             <br>
-            JavaScript | React | Node
+              JavaScript | React | Node  
             <br>
             <a
               href="https://twitter.com/jskway"
@@ -67,9 +67,8 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>Hi, I’m Jack. I’m a full stack developer who’s been coding for 3+
-            years. My specialties include JavaScript, React, Node and Unit
-            Testing.
+          <p>Hi, I’m Jack. I’m a full stack engineer who’s been coding for 3+
+            years. My specialties include JavaScript, React, Node and Python.
 
 With a background in marketing and logistics, I’ve developed strong creative problem-solving, organizational and collaborative skills. I’m interested in combining those skills with web technologies to help build engaging and cutting-edge projects.</p>
         </div>
