--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>
             Software Engineer
             <br>
-              JavaScript | React | Node  
+              React | Node | TypeScript  
             <br>
             <a
               href="https://twitter.com/jskway"
@@ -67,10 +67,9 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>Hi, I’m Jack. I’m a full stack engineer who’s been coding for 3+
-            years. My specialties include JavaScript, React, Node and Python.
+          <p>Hi 👋 I'm a Full Stack engineer specializing in React, Node and TypeScript.
 
-With a background in marketing and logistics, I’ve developed strong creative problem-solving, organizational and collaborative skills. I’m interested in combining those skills with web technologies to help build engaging and cutting-edge projects.</p>
+My background in logistics and marketing honed my ability to juggle time-sensitive tasks and understand customer needs. I’m interested in combining these skills with web technologies to help build engaging, performant and well-maintained projects.</p>
         </div>
       </section>
 
@@ -154,12 +153,10 @@ With a background in marketing and logistics, I’ve developed strong creative p
                   reviews, and stakeholder meetings</li>
                   <li>Helped refactor the initial codebase for improved
                     efficiency, readability and scalability</li>
-                  <li>Assisted Web team members with implementing OAuth 2.0 and Okta
-                    authentication flow</li> 
-                  <li>Wrote unit tests to contribute to >50% test coverage
-                    across our whole codebase</li>
+                  <li>Collaborated with web team members to integrate Okta, write unit tests and fix bugs</li> 
                 </ul>
-                <strong>Tech Stack</strong>: React, Redux, Material-UI, Okta, Node.js, Express, PostgreSQL, Jest
+                <strong>React | Redux | Material-UI | Okta | Node.js | Express |
+                  PostgreSQL | Jest</strong>
               </p>
             </header>
             <div class="content">
@@ -199,15 +196,17 @@ With a background in marketing and logistics, I’ve developed strong creative p
                 <br>
                 <h5>Contributions:</h5>
                 <ul style="text-align: left">
-                  <li>Wrote an algorithm that examines the state of each cell's
-                  neighbors and applies the Rules to update the cell's state</li>
+                  <li>Wrote an algorithm that examines the state of each cell's neighbors and applies mathematical rules to update the cell's state</li>
                   <li>Created three sample cell configurations that users can
                     load and run</li> 
-                  <li>Added an option that creates random cell configurations</li>
-                  <li>Added a feature that allows users to specify the speed
-                    of the simulation</li>
+                  <li>
+                    Implemented three sample cell configurations that users can load and run
+                  </li>
+                  <li>
+                    Enabled a feature to adjust the speed of the simulation
+                  </li>
                 </ul>
-                <strong>Tech Stack</strong>: React, React Context
+                <strong>React | React Context</strong>
               </p>
             </header>
             <div class="content">
@@ -253,16 +252,14 @@ With a background in marketing and logistics, I’ve developed strong creative p
                 <br>
                 <h5>Contributions:</h5>
                 <ul style="text-align: left">
-                  <li>Building React components to match design files provided by
-                    our UX members</li>
-                  <li>Utilizing data endpoints provided by our DS members</li> 
-                  <li>Building Backend models and routers to ensure data integrity and
-                    consistency</li>
-                  <li>Writing unit tests to ensure our codebase has over 50%
-                    test coverage</li>
+                  <li>Constructed React components to match design files provided by our UX members, utilized data endpoints provided by our DS members</li>
+                  <li>Built backend routers and models to ensure data integrity
+                    and consistency</li>
+                  <li>Wrote unit tests to ensure our codebase has over 50% test
+                    coverage</li>
                 </ul>
-                <strong>Tech Stack</strong>: React, Material-UI, bcrypt.js,
-                JWTs, Node.js, Express, PostgreSQL, Jest
+                <strong>React | Material-UI | bcrypt.js |
+                JWTs | Node.js | Express | PostgreSQL | Jest</strong>
               </p>
             </header>
             <div class="content">
