Update about me content

--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>Hi 👋 I'm a Full Stack engineer specializing in React, Node and TypeScript.
-
-My background in logistics and marketing honed my ability to juggle time-sensitive tasks and understand customer needs. I’m interested in combining these skills with web technologies to help build engaging, performant and well-maintained projects.</p>
+          <p>Hi 👋 I'm a software engineer specializing in React, Node and
+						TypeScript.</p>
+          <p>My background in logistics and marketing honed my ability to juggle
+						time-sensitive tasks and understand customer needs. I’m interested
+						in combining these skills with web technologies to create a seamless
+						experience for users by contributing clean, scalable, well-tested
+						code.</p>
         </div>
       </section>
 
