Update About Me content

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <h2>About Me</h2>
         </header>
         <div class="content">
-          <p>Hi 👋 I'm a software engineer specializing in React, Node and
-						TypeScript.</p>
+          <p>Hi 👋 I'm a software engineer specializing in modern JavaScript
+						frameworks and technologies.</p>
           <p>My background in logistics and marketing honed my ability to juggle
 						time-sensitive tasks and understand customer needs. I’m interested
 						in combining these skills with web technologies to create a seamless
